# boundary-first-flattening

./: .gitignore  CMakeLists.txt
apps/viewer/include/: Shader.h  ShadersSource.h  Viewer.h
apps/viewer/src/: Shader.cpp  Viewer.cpp
include/bff/Etcher/: etcher.h
include/bff/linear-algebra/: DenseMatrix.inl
include/bff/mesh/: Mesh.h
input/: bunny.stl  face.stl  paraboloid.stl  punctured-torus.stl  scene-hemisphere.txt
src/mesh/: Mesh.cpp
